More testing and fixes for cert installation

--- a/StandaloneMsi/Template.wxs
+++ b/StandaloneMsi/Template.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="*" UpgradeCode="7b0af2d8-d27b-4a07-9be5-88185a9153be"
-           Name="SampleApp appx msi" Version="0.0.1" Manufacturer="Example Company Name" Language="1033">
+           Name="SampleApp" Version="0.0.1" Manufacturer="Example Company Name" Language="1033">
     <Package InstallerVersion="200" Compressed="yes" Comments="Windows Installer Package"/>
     <Media Id="1" Cabinet="product.cab" EmbedCab="yes"/>
 
@@ -9,18 +9,17 @@
       <Directory Id="ProgramFilesFolder">
         <Directory Id="INSTALLDIR" Name="SampleApp2">
           <Component Id="ApplicationFiles" Guid="a2a84f6a-2654-4ace-aefd-55387c5cb015">
-            <File Id="script" Source="Install-UntrustedAppx.ps1"/>
-            <File Id="cert" Source="SampleApp_1.0.0.0_x64.appx"/>
-            <File Id="appx" Source="SampleApp_1.0.0.0_x64.cer"/>
+            <File Id="InstallUntrustedAppx.ps1" Source="Install-UntrustedAppx.ps1"/>
+            <File Id="UninstallUntrustedAppx.ps1" Source="Uninstall-UntrustedAppx.ps1"/>
+            <File Id="SampleApp_1.0.0.0_x64.appx" Source="SampleApp_1.0.0.0_x64.appx"/>
+            <File Id="SampleApp_1.0.0.0_x64.cer" Source="SampleApp_1.0.0.0_x64.cer"/>
           </Component>
-          <Directory Id="depsdir" Name="Dependencies">
-            <Directory Id="depsx64" Name="x64">
-              <Component Id="depsFiles" Guid="2b6515e9-5b3a-4789-b1f0-cb44d29ab987">
-                <File Id="Microsoft.NET.Native.Framework.1.2.appx" Source="Dependencies/x64/Microsoft.NET.Native.Framework.1.2.appx"/>
-                <File Id="Microsoft.NET.Native.Runtime.1.1.appx" Source="Dependencies/x64/Microsoft.NET.Native.Runtime.1.1.appx"/>
-                <File Id="Microsoft.VCLibs.x64.14.00.appx" Source="Dependencies/x64/Microsoft.VCLibs.x64.14.00.appx"/>
-              </Component>
-            </Directory>
+          <Directory Id="DependencyDir" Name="Dependencies">
+            <Component Id="DependencyFiles" Guid="2b6515e9-5b3a-4789-b1f0-cb44d29ab987">
+              <File Id="Microsoft.NET.Native.Framework.1.2.appx" Source="Dependencies/Microsoft.NET.Native.Framework.1.2.appx"/>
+              <File Id="Microsoft.NET.Native.Runtime.1.1.appx" Source="Dependencies/Microsoft.NET.Native.Runtime.1.1.appx"/>
+              <File Id="Microsoft.VCLibs.x64.14.00.appx" Source="Dependencies/Microsoft.VCLibs.x64.14.00.appx"/>
+            </Component>
           </Directory>
         </Directory>
       </Directory>
@@ -28,12 +27,13 @@
 
     <Feature Id="DefaultFeature" Level="1">
       <ComponentRef Id="ApplicationFiles"/>
-      <ComponentRef Id="depsFiles"/>
+      <ComponentRef Id="DependencyFiles"/>
     </Feature>
 
     <SetProperty Id="InstallAppx" Before="InstallFiles" Sequence="execute" Value ="&quot;powershell.exe&quot; -ExecutionPolicy Bypass -File &quot;[INSTALLDIR]Install-UntrustedAppx.ps1&quot; SampleApp_1.0.0.0_x64" />
     <CustomAction Id="InstallAppx" BinaryKey="WixCA" DllEntry="CAQuietExec" Execute="deferred" Return="check" Impersonate="yes" />
-    <SetProperty Id="UninstallAppx" Before="InstallFiles" Sequence="execute" Value ="&quot;powershell.exe&quot; -ExecutionPolicy Bypass -Command &quot;&amp; { }&quot;" />
+    
+    <SetProperty Id="UninstallAppx" Before="InstallFiles" Sequence="execute" Value ="&quot;powershell.exe&quot; -ExecutionPolicy Bypass -File &quot;[INSTALLDIR]Uninstall-UntrustedAppx.ps1&quot; SampleApp_1.0.0.0_x64" />
     <CustomAction Id="UninstallAppx" BinaryKey="WixCA" DllEntry="CAQuietExec" Execute="deferred" Return="check" Impersonate="yes" />
 
     <InstallExecuteSequence>
